[package]
name = "nullsec-spoof"
version = "1.0.0"
edition = "2021"
authors = ["bad-antics <bad-antics@users.noreply.github.com>"]
description = "High-performance metadata spoofing toolkit for anti-forensics"
license = "GPL-3.0"
repository = "https://github.com/bad-antics/nullsec-spoof"
keywords = ["security", "forensics", "metadata", "spoofing", "privacy"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
walkdir = "2.4"
filetime = "0.2"
mac_address = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
indicatif = "0.17"
kamadak-exif = "0.5"
img_parts = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
